Add o projeto lista tarefas, melhoras no site com a inclusão de um seção que busque representar minhas habilidades em porcentagem.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a class="nav-link text-info" href="#formacao">Formação</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-info" href="#experiencia">Experiência</a>
+                    <a class="nav-link text-info" href="#habilidades">Habilidades</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-info" href="#cursos-certificados">Cursos/certificados</a>
@@ -97,25 +97,90 @@
             </div><!-- Fim container -->
         </section> <!-- Fim do section formação -->
         <hr>
-        <section id="experiencia"><!-- Inicio do section experiência -->
+        <section id="habilidades"><!-- Inicio do section habilidades -->
             <div class="container"> <!-- Inicio container -->
                 <br><br>
-                <h1 class="display-4">Experiência</h1>
+                <h1 class="display-4">Habilidades</h1>
                 <br><br>
                 <div class="row">
-                    <div class="col-sm-4">
-                        <p class="font-weight-bold">Desenvolvedor web freelancer</p>
+                    <div class="col-lg-6">
+                        <h4 class="font-weight-bold">HTML5</h4>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 100%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">100%</div>
+                        </div>
                     </div>
-                    <div class="col-sm-5">
-                        <p class="lead">Tecnologias que utilizo: HTML, CSS [Bootstrap], PHP [Laravel], JavaScript [ES6], desenvolvimento mobile com Java, banco de dados (SQL, SGBDs: MySQL, Oracle).</p>
-                        <p class="lead font-weight-bold">Trabalhos:</p>
-                        <p><a target="_blank" href="https://www.mecanicakustom.com.br" class="text-info">Mecânica Kustom</a></p>
-                    </div>
-                    <div class="col-sm-3">
-                        <p class="lead">Freelancer</p>
-                        <p>Jan de 2019 - o momento</p>
+                    <div class="col-lg-6 col-responsivo">
+                        <h4 class="font-weight-bold">CSS3</h4>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 50%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">50%</div>
+                        </div>
                     </div>
                 </div>
+                <br>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h4 class="font-weight-bold">JavaScript</h4>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 60%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">60%</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-responsivo">
+                        <h4 class="font-weight-bold">ECMAScript 6 - OO</h4>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 50%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">50%</div>
+                        </div>  
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h4 class="font-weight-bold">*PHP 7</h4>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 60%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">60%</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-responsivo">
+                        <h4 class="font-weight-bold">SQL</h4>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 70%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h4 class="font-weight-bold">Bootstrap</h4>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 90%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">90%</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-responsivo">
+                        <h4 class="font-weight-bold">JQuery</h4>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 70%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h4 class="font-weight-bold">Diagramação UML</h4>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 80%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-responsivo">
+                        <h4 class="font-weight-bold">**Desenvolvimento mobile</h4>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 20%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">20%</div>
+                        </div>
+                    </div>  
+                </div>
+                <br><br>
+                <p class="mb-0">*A seção de PHP inclui conhecimentos em: código estruturado, orientação a objetos, PDO, consumo de webservices e padrão MVC.</p>
+                <p class="mb-0">**A seção de desenvolvimento mobile inclui conhecimentos em: Desenvolvimento Android com Java (utilizando a IDE Android Studio) e Ionic.</p>
+                <br>
+                <span class="font-weight-bold">Visite a seção <a href="#projetos">PROJETOS</a> para visualizar os trabalhos que realizei com minhas habilidades</span>
             </div><!-- Fim container -->
         </section> <!-- Fim do section formação -->
         <hr>
@@ -155,7 +220,7 @@
                                 <img class="card-img-top" src="img/projeto1.jpg" alt="projeto pessoal UNES Universidade">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        UNES Universidade
+                                        Projeto UNES Universidade
                                         <p>Projeto para o site de uma Universidade. <br> Tecnologias: HTML5 básico</p>
                                     </p>
                                 </div>
@@ -168,7 +233,7 @@
                                 <img class="card-img-top" src="img/projeto2.jpg" alt="projeto pessoal modelo Anna Bella">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        Anna Bella
+                                        Projeto Anna Bella
                                         <p>Projeto para o site de uma modelo. <br> Tecnologias: HTML5/CSS3 básico</p>
                                     </p>
                                 </div>
@@ -181,7 +246,7 @@
                                 <img class="card-img-top" src="img/projeto3.jpg" alt="projeto pessoal TecBlog">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        TecBlog
+                                        Projeto TecBlog
                                         <p>Projeto para um blog de tecnologia. <br> Tecnologias: HTML5/CSS3 intermediário</p>
                                     </p>
                                 </div>
@@ -197,7 +262,7 @@
                                 <img class="card-img-top" src="img/projeto4.jpg" alt="projeto pessoal NotíciasCidade">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        Notícias Cidade
+                                        Projeto Notícias Cidade
                                         <p>Projeto para um site de notícias. <br> Tecnologias: HTML5/CSS3 avançado</p>
                                     </p>
                                 </div>
@@ -210,7 +275,7 @@
                                 <img class="card-img-top" src="img/projeto5.jpg" alt="projeto pessoal Chalé Hotel">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        Chalé Hotel
+                                        Projeto Chalé Hotel
                                         <p>Projeto para um site de hotel. <br> Tecnologias: HTML5/CSS3 avançado</p>
                                     </p>
                                 </div>
@@ -223,7 +288,7 @@
                                 <img class="card-img-top" src="img/projeto6.jpg" alt="projeto pessoal Museu Nacional">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        Museu Nacional
+                                        Projeto Museu Nacional
                                         <p>Projeto para um site do Museu Nacional. <br> Tecnologias: HTML5/CSS3 avançado</p>
                                     </p>
                                 </div>
@@ -239,7 +304,7 @@
                                 <img class="card-img-top" src="img/projeto9.jpg" alt="projeto pessoal Finans">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        Finans
+                                        Projeto Finans
                                         <p>Projeto para um site de finanças pessoais. <br> Tecnologias: HTML5, CSS3 e Bootstrap</p>
                                     </p>
                                 </div>
@@ -252,7 +317,7 @@
                                 <img class="card-img-top" src="img/projeto10.jpg" alt="projeto pessoal Clone de layout Spotify">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        Clone Spotify
+                                        Projeto Clone Spotify
                                         <p>Projeto de clone de layout da Index do Spotify. <br> Tecnologias: HTML5, CSS3 e Bootstrap</p>
                                     </p>
                                 </div>
@@ -265,7 +330,7 @@
                                 <img class="card-img-top" src="img/projeto11.jpg" alt="projeto pessoal App Calculadora">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        App Calculadora
+                                        Projeto App Calculadora
                                         <p>Projeto de calculadora com operações básicas. <br> Tecnologias: HTML5, CSS3, Bootstrap e JavaScript</p>
                                     </p>
                                 </div>
@@ -281,7 +346,7 @@
                                 <img class="card-img-top" src="img/projeto12.jpg" alt="projeto pessoal app game mata mosquito">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        AppGame Mata Mosquito
+                                        Projeto App Game Mata Mosquito
                                         <p>Projeto de um jogo mata mosquito. <br> Tecnologias: HTML5, CSS3, Bootstrap e JavaScript</p>
                                     </p>
                                 </div>
@@ -294,7 +359,7 @@
                                 <img class="card-img-top" src="img/projeto13.jpg" alt="projeto pessoal app orçamento pessoal">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        App Orçamento Pessoal
+                                        Projeto App Orçamento Pessoal
                                         <p>Projeto de um app de orçamento pessoal, com inserção de dados delete e filtragem em LocalStorage. <br> Tecnologias: HTML5, CSS3, Bootstrap e JavaScript (ECMAScript 6) [Extras: localStorage e Array Filter]</p>
                                     </p>
                                 </div>
@@ -307,7 +372,7 @@
                                 <img class="card-img-top" src="img/projeto14.jpg" alt="projeto pessoal app orçamento pessoal">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        App Help Desk
+                                        Projeto App Help Desk
                                         <p>Projeto prático de desenvolvimento de um app que permita abertura de chamados de help desk. <br> Tecnologias: HTML5, CSS(Bootstrap) e PHP7 básico/intermediário e estruturado.</p>
                                     </p>
                                 </div>
@@ -323,7 +388,7 @@
                                 <img class="card-img-top" src="img/projeto15.jpg" alt="projeto pessoal app game mata mosquito">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        App Send Mail
+                                        Projeto App Send Mail
                                         <p>Projeto prático de desenvolvimento de um app que permita o envio de e-mails para um destinatário. <br> Tecnologias: HTML5, CSS (Bootstrap) e PHP7 OO com library PHPMailer.</p>
                                     </p>
                                 </div>
@@ -351,6 +416,22 @@
                                     <p class="card-text">
                                         Projeto PesquisaEndereço
                                         <p>PProjeto curto de pesquisa de CEP realizado para exemplificação do consumo de webservices. <br> Tecnologias: HTML5, CSS (Bootstrap) e JavaScript [XMLHttpRequest e JSON] <span class="text-warning">Webservice consumida: Viacep</span></p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-ListaTarefas">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto18.jpg" alt="projeto pessoal app game mata mosquito">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Projeto App Lista Tarefas
+                                        <p>Projeto prático de desenvolvimento de um app que permita um CRUD de tarefas. <br> Tecnologias: HTML5, CSS(Bootstrap), JavaScript, SQL e PHP (PDO e Orientação a Objetos).</p>
                                     </p>
                                 </div>
                             </div>
