Retirada animação da barra de progresso para melhor fluidez em mobile.

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
                     <div class="col-lg-6">
                         <h4 class="font-weight-bold">HTML5</h4>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 100%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">100%</div>
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 100%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">100%</div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-responsivo">
                         <h4 class="font-weight-bold">CSS3</h4>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 50%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">50%</div>
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">50%</div>
                         </div>
                     </div>
                 </div>
@@ -121,13 +121,13 @@
                     <div class="col-lg-6">
                         <h4 class="font-weight-bold">JavaScript</h4>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 60%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">60%</div>
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 60%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">60%</div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-responsivo">
                         <h4 class="font-weight-bold">ECMAScript 6 - OO</h4>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 50%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">50%</div>
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">50%</div>
                         </div>  
                     </div>
                 </div>
@@ -136,13 +136,13 @@
                     <div class="col-lg-6">
                         <h4 class="font-weight-bold">*PHP 7</h4>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 60%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">60%</div>
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 60%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">60%</div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-responsivo">
                         <h4 class="font-weight-bold">SQL</h4>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 70%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">70%</div>
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 70%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">70%</div>
                         </div>
                     </div>
                 </div>
@@ -151,13 +151,13 @@
                     <div class="col-lg-6">
                         <h4 class="font-weight-bold">Bootstrap</h4>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 90%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">90%</div>
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 90%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">90%</div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-responsivo">
                         <h4 class="font-weight-bold">JQuery</h4>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 70%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">70%</div>
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 70%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">70%</div>
                         </div>
                     </div>
                 </div>
@@ -166,13 +166,13 @@
                     <div class="col-lg-6">
                         <h4 class="font-weight-bold">Diagramação UML</h4>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 80%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">80%</div>
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 80%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">80%</div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-responsivo">
                         <h4 class="font-weight-bold">**Desenvolvimento mobile</h4>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 20%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">20%</div>
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 20%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">20%</div>
                         </div>
                     </div>  
                 </div>
