Adicionando o projeto dashboard e compactação das imagens para melhor loading.

--- a/index.html
+++ b/index.html
@@ -437,6 +437,19 @@
                             </div>
                         </a>
                     </div>
+                    <div class="col-lg-4 col-responsivo">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-Dashboard">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto19.jpg" alt="projeto pessoal app game mata mosquito">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Projeto Dashboard
+                                        <p>Projeto prático de desenvolvimento de um app de dashboard. <br> Tecnologias: HTML5, CSS3(Bootstrap), JavaScript(JQuery, AJAX, JSON) e conceitos de PHP orientado a objetos. </p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <br><br>
                 <h3>Projetos acadêmicos</h2>
