Adicionado o projeto twitter clone e pequenas mudanças no alt das imagens dos projetos

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     <div class="col-lg-4 col-responsivo">
                         <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-HelpDesk">
                             <div class="card text-white bg-dark card-content">
-                                <img class="card-img-top" src="img/projeto14.jpg" alt="projeto pessoal app orçamento pessoal">
+                                <img class="card-img-top" src="img/projeto14.jpg" alt="projeto pessoal help desk">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Projeto App Help Desk
@@ -385,7 +385,7 @@
                     <div class="col-lg-4">
                         <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-SendMail">
                             <div class="card text-white bg-dark card-content">
-                                <img class="card-img-top" src="img/projeto15.jpg" alt="projeto pessoal app game mata mosquito">
+                                <img class="card-img-top" src="img/projeto15.jpg" alt="projeto pessoal send mail">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Projeto App Send Mail
@@ -398,7 +398,7 @@
                     <div class="col-lg-4 col-responsivo">
                         <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-DBLojaVirtual">
                             <div class="card text-white bg-dark card-content">
-                                <img class="card-img-top" src="img/projeto16.jpg" alt="projeto pessoal app orçamento pessoal">
+                                <img class="card-img-top" src="img/projeto16.jpg" alt="projeto pessoal DB loja virtual">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Projeto DBLojaVirtual
@@ -411,7 +411,7 @@
                     <div class="col-lg-4 col-responsivo">
                         <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-PesquisaEndereco">
                             <div class="card text-white bg-dark card-content">
-                                <img class="card-img-top" src="img/projeto17.jpg" alt="projeto pessoal app orçamento pessoal">
+                                <img class="card-img-top" src="img/projeto17.jpg" alt="projeto pessoal pesquisa endereço consumindo webservices">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Projeto PesquisaEndereço
@@ -427,7 +427,7 @@
                     <div class="col-lg-4">
                         <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-ListaTarefas">
                             <div class="card text-white bg-dark card-content">
-                                <img class="card-img-top" src="img/projeto18.jpg" alt="projeto pessoal app game mata mosquito">
+                                <img class="card-img-top" src="img/projeto18.jpg" alt="projeto pessoal lista tarefas">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Projeto App Lista Tarefas
@@ -440,11 +440,24 @@
                     <div class="col-lg-4 col-responsivo">
                         <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-Dashboard">
                             <div class="card text-white bg-dark card-content">
-                                <img class="card-img-top" src="img/projeto19.jpg" alt="projeto pessoal app game mata mosquito">
+                                <img class="card-img-top" src="img/projeto19.jpg" alt="projeto pessoal Dashboard com ajax">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Projeto Dashboard
                                         <p>Projeto prático de desenvolvimento de um app de dashboard. <br> Tecnologias: HTML5, CSS3(Bootstrap), JavaScript(JQuery, AJAX, JSON) e conceitos de PHP orientado a objetos. </p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-responsivo">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/ProjetoClone-Twitter">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto20.jpg" alt="projeto pessoal clone twitter">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Projeto Clone Twitter
+                                        <p>Projeto prático de uma cópia do sistema Twitter. <br> Tecnologias: HTML5, CSS3(Bootstrap4, Font-Awesome), JS(jQuery, bootstrap.js, popper.js) e PHP OO com MVC (Composer). </p>
                                     </p>
                                 </div>
                             </div>
