Adicionando o projeto tabela brasileirão Vue.JS e Slim API RESTful

--- a/index.html
+++ b/index.html
@@ -464,6 +464,35 @@
                         </a>
                     </div>
                 </div>
+                <br>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Vue.js/tree/master/iniciando-com-vuejs">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto21.jpg" alt="projeto pessoal tabela brasileirao">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Projeto VUE - Tabela Brasileirão Série A - 2018
+                                        <p>Projeto prático de desenvolvimento de uma tabela do brasileirão. <br> Tecnologias: HTML5, CSS(Bootstrap), JavaScript (ES6) e VUE.JS.</p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-responsivo">
+                        <a class="card-link" target="_blank" href="https://github.com/nicolasteixeira3856/Projeto-SlimAPI-RESTful">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto22.jpg" alt="projeto pessoal api slim RESTful">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Projeto Slim API RESTful
+                                        <p>Projeto prático de desenvolvimento de uma API para CRUD de produtos<br> Tecnologias: JSON, PHP OO/Composer/MVC/Slim Framework/Illuminate Database-Eloquent(ORM)/JwtAuthentication para geração de Tokens de acesso a API</p>
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div> 
+                </div>
                 <br><br>
                 <h3>Projetos acadêmicos</h2>
                 <span>Clique na caixa para visualizar em meu GitHub</span>
