Pequena alteração de erro de escrita no projeto 22

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                                 <div class="card-body">
                                     <p class="card-text">
                                         Projeto Slim API RESTful
-                                        <p>Projeto prático de desenvolvimento de uma API para CRUD de produtos<br> Tecnologias: JSON, PHP OO/Composer/MVC/Slim Framework/Illuminate Database-Eloquent(ORM)/JwtAuthentication para geração de Tokens de acesso a API</p>
+                                        <p>Projeto prático de desenvolvimento de uma API para CRUD de produtos<br> Tecnologias: JSON, PHP OO/Composer/MVC/Slim Framework/Illuminate Database-Eloquent(ORM)/JwtAuthentication e JWT para geração de Tokens de acesso a API</p>
                                     </p>
                                 </div>
                             </div>
